<resources>
    <string name="app_name">TripManager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="signInButton">Sign in</string>
    <string name="signUpButton">Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>


    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="prompt_password">Password (optional) </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="addnewtripheading">Enter Trip Details</string>
    <string name="tripname">Trip Name</string>
    <string name="startdate">Select start Date</string>
    <string name="enddate">Select end Date</string>
    <string name="sourcecity">Source City</string>
    <string name="destinationcity">Destination City</string>
    <string name="description">Description</string>
    <string name="mode"> Travel Mode</string>
    <string name="tripimage">Trip Image</string>
    <string name="addtripbutton">Add</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    
    <string name="totalTrips">Total number of trips</string>
    <string name="totalDays">Total number of days</string>
    <string name="totalCities">Number of cities visited</string>
    <string name="totalDistance">Distance covered (miles)</string>
    <string name="bike">Bike</string>
    <string name="bus">Bus</string>
    <string name="plane">Plane</string>
    <string name="car">Car</string>
    <string name="title_activity_trip_details">TripDetails</string>
    <string name="action_settings_1">Maps</string>
    <string name="action_settings_2">Alerts</string>
    <string name="action_settings_3">Friends</string>

    <string name="tab1">Itinerary</string>
    <string name="tab2">Details</string>
    <string name="tab3">Checklist</string>
    <string name="tab4">Past Trips</string>
    <string name="tab5">Upcoming Trips</string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tripfriends">Friends</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_trip">CreateTrip</string>
    <string name="title_activity_trip_details_maps">Map</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_edit_user_profile">EditUserProfile</string>
    <string name="title_activity_trip_details_friends">TripDetailsFriends</string>


</resources>
