<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.learn.com.tripmanager.CreateTrip">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/addnewtripheading"
            android:visibility="visible"
            app:popupTheme="@style/PopupOverlay">


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tripName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tripname"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/sourcecity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sourcecity"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/desinationcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destinationcity"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/startdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/startdate"
                android:inputType="date"/>

            <EditText
                android:id="@+id/enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/enddate"
                android:inputType="date"/>

            <TextView
                android:id="@+id/desciptionheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/description"
                android:textSize="8pt"/>

            <EditText
                android:id="@+id/descriptionvalue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/travelmode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/modelist"
                    android:paddingLeft="75dp"
                    android:paddingStart="75dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tripimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tripimage"
                    android:textSize="8pt" />

                <ImageButton
                    android:id="@+id/tripImagebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:paddingLeft="35dp"
                    android:paddingStart="35dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/camera" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addnewtriptn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="onAddTripClick"
                    android:text="@string/addtripbutton"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
