<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.learn.com.tripmanager.TravelHistoryStats">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/addnewtripheading"
            android:visibility="visible"
            app:popupTheme="@style/PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Travel Stats"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:paddingTop="20dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <TableRow>
            <TextView
                android:text="@string/totalTrips"
                android:textColor="#000000"
                android:layout_marginTop="60dp"
                android:paddingTop="10dp"
                android:textStyle="normal"
                android:textSize="20dp"
                android:padding="3dip" />
            <TextView
                android:id="@+id/totaltrips"
                android:gravity="right"
                android:layout_marginTop="60dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/totalDays"
                android:textColor="#000000"
                android:textStyle="normal"
                android:paddingTop="10dp"
                android:textSize="20dp"
                android:padding="3dip" />
            <TextView
                android:id="@+id/totaldays"
                android:gravity="right"
                android:textSize="20dp"
                android:textAlignment="center"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/totalCities"
                android:textColor="#000000"
                android:textStyle="normal"
                android:paddingTop="10dp"
                android:textSize="20dp"
                android:padding="3dip" />
            <TextView
                android:id="@+id/totalcities"
                android:gravity="right"
                android:textSize="20dp"
                android:textAlignment="center"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/totalDistance"
                android:paddingTop="10dp"
                android:textColor="#000000"
                android:textStyle="normal"
                android:textSize="20dp"
                android:padding="3dip" />
            <TextView
                android:id="@+id/totaldistance"
                android:gravity="right"
                android:textSize="20dp"
                android:textAlignment="center"
                android:padding="3dip" />
        </TableRow>

    </TableLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
